--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -46,6 +46,7 @@ if(${use_openssl})
 add_subdirectory(x509_openssl_ut)
 endif()
 
+add_subdirectory(optionhandler_ut)
 add_subdirectory(string_tokenizer_ut)
 add_subdirectory(strings_ut)
 add_subdirectory(tickcounter_ut)
@@ -54,8 +55,8 @@ add_subdirectory(uniqueid_ut)
 add_subdirectory(uuid_ut)
 add_subdirectory(urlencode_ut)
 add_subdirectory(vector_ut)
+add_subdirectory(xio_impl_ut)
 add_subdirectory(xio_ut)
-add_subdirectory(optionhandler_ut)
 
 if(use_wolfssl)
     add_subdirectory(tlsio_wolfssl_ut)
