Set lib search path to find sandboxed curl 7.58+

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -474,7 +474,12 @@ if(${use_http})
             find_package_handle_standard_args(CURL DEFAULT_MSG CURL_LIBRARIES)
 
             include_directories(${CURL_INCLUDE_DIRS})
-            set(aziotsharedutil_target_libs ${aziotsharedutil_target_libs} ${CURL_LIBRARIES})
+            if (XCODE)
+                set(aziotsharedutil_target_libs ${aziotsharedutil_target_libs} -L${CURL_LIBRARY_DIRS} ${CURL_LIBRARIES})
+                message(STATUS "Curl libraries: " ${CURL_LIBRARY_DIRS})
+            else()
+                set(aziotsharedutil_target_libs ${aziotsharedutil_target_libs} ${CURL_LIBRARIES})
+            endif()
         endif(NOT use_builtin_httpapi)
     endif()
 endif(${use_http})
