--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -487,8 +487,8 @@ endfunction()
 
 if (NOT ${skip_samples})
     if(${use_openssl} AND WIN32)
-        FindDllFromLib(SSL_DLL "${OPENSSL_SSL_LIBRARY}")
-        FindDllFromLib(CRYPTO_DLL "${OPENSSL_CRYPTO_LIBRARY}")
+        #FindDllFromLib(SSL_DLL "${OPENSSL_SSL_LIBRARY}")
+        #FindDllFromLib(CRYPTO_DLL "${OPENSSL_CRYPTO_LIBRARY}")
     endif()
     add_subdirectory(samples)
 endif()
