updates required for xbox build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -204,7 +204,7 @@ ${PLATFORM_C_FILE}
 ${SOCKETIO_C_FILE}
 ${TICKCOUTER_C_FILE}
 ${THREAD_C_FILE}
-${UNIQUEID_C_FILE}
+#${UNIQUEID_C_FILE}
 ${ENVIRONMENT_VARIABLE_C_FILE}
 )
 
